[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bomb"
version = "0.1.0"
description = "External enumeration orchestrator"
readme = "README.md"
requires-python = ">=3.9"

[project.scripts]
bomb = "bomb.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
